# base-fastapi-template

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  Pipfile  README.md  RuntimeDockerfile  construct.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  account.py  common.py  notification.py  settings.py
app/ci-cd/github-actions/workflows/: build-image-to-acr-and-deploy-to-sae.yaml
app/config/: setting.py
app/forms/: account.py  common.py  settings.py
app/libs/: __init__.py  constants.py  custom.py  data_process_utils.py  email.py  helpers.py  http_with_retry.py  response.py
app/libs/cache/: __init__.py
app/libs/cache_controller/: __init__.py  redis_controller.py
app/libs/cloud_provider/: __init__.py  ali.py  azure.py
app/libs/cloud_provider/alicloud/: ali.py  oss.py
app/libs/controller/: __init__.py  jenkins_controller.py
app/libs/controller/cache_controller/: __init__.py  redis_controller.py
app/libs/controller/cloud_provider/alicloud/: ali.py  oss.py
app/libs/controller/database/: __init__.py  mongo_controller.py
app/libs/controller/kafka/: consumer.py
app/libs/ctrl/: __init__.py
app/libs/ctrl/cloud/: __init__.py  ali.py  azure.py
app/libs/ctrl/db/: __init__.py  mongodb.py  mysql.py  redis.py
app/libs/ctrl/kafka/: __init__.py  consumer.py
app/libs/jenkins/: __init__.py
app/libs/kafka/: consumer.py
app/libs/sso/: __init__.py  azure.py  hktdc.py
app/models/: __init__.py  account.py  common.py  events.py  user.py
app/response/: __init__.py  account.py  root.py
app/statics/rules/: CLAUDE.md  FastAPI 项目架构与开发规范.md  Git Message.md
app/templates/: base-template.html
app/templates/email/: certificate-approval-required.html  event-modify-reason.html  ngo-account-approved.html  user-modify-reason.html  verification-code-template.html
app/view_models/: __init__.py  account.py  dashboard.py  events.py  notification.py  payment.py  settings.py
app/view_models/account/: admin.py  common.py  origanization.py  team.py  volunteer.py
app/view_models/common/: __init__.py  common.py  reseller.py  settings.py
ci-cd/: Jenkinsfile
ci-cd/gitlab-actions/: .gitlab-ci.yml
